<resources>
    <string name="app_name">Velvet Pearl Lottery</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="new_lottery">New Lottery</string>
    <string name="lottery_history">Lottery History</string>
    <string name="history_loading_history">Loading history</string>
    <string name="history_no_lotteries">No lotteries</string>
    <string name="history_error_loading_history">Could not load history. \nDo you have internet access?</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="authentication">Authentication</string>
    <string name="initializing_app">Initializing app</string>
    <string name="error_network_required">Network access is required.</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="lotteryhome_loading_lottery">Loading lottery</string>
    <string name="lotteryhome_error_timeout">Could not load the lottery. \nDo you have internet access?</string>
    <string name="lottery">Lottery</string>
    <string name="number_range">Number range</string>
    <string name="price_per_number">Price per number</string>
    <string name="tickets">Tickets</string>
    <string name="prizes">Prizes</string>
    <string name="winners">Winners</string>
    <string name="home">Home</string>
    <string name="numbers_sold">Numbers sold</string>
    <string name="tickets_list_item_owner">Owner</string>
    <string name="attention">Attention</string>
    <string name="lottery_was_deleted" >This lottery has been deleted.</string>
    <string name="none_found">None found</string>
    <string name="ticket">Ticket</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_ticket_confirm" >Are you sure you want to delete this ticket?</string>
    <string name="confirm">Confirm</string>
    <string name="owner">Owner</string>
    <string name="price">Price</string>
    <string name="lottery_numbers">Lottery numbers</string>
    <string name="ticket_edit_owner_hint">Name the ticket owner</string>
    <string name="save">Save</string>
    <string name="lottery_number">Lottery number</string>
    <string name="delete_lottery_number_confirm">Are you sure you want to delete this lottery number?</string>
    <string name="save_failed">Save failed</string>
    <string name="ticket_edit_owner_required">Name of the ticket owner is required.</string>
    <string name="use_number">Use number</string>
    <string name="random">Random</string>
    <string name="lottery_num_error_unavailable">The number is not available.</string>
    <string name="lottery_num_input_hint">Specific number</string>
    <string name="lottery_num_error_missing">Missing number.</string>
    <string name="lottery_num_error_range">Out of range %1$d - %2$d.</string>
    <string name="lottery_num_instructions" >Type a specific lottery number or have a random one chosen.</string>
    <string name="lottery_num_error_format">Only integers.</string>
    <string name="list_item_ticket_number_count" >%1$d lottery number(s)</string>
    <string name="list_item_ticket_credits" translatable="false">%1$.2f credits</string>
    <string name="no_lottery_numbers_left">No free lottery numbers left.</string>
    <string name="prize_error_name_required">Name of the prize is required.</string>
    <string name="prize_name_hint">Prize name</string>
    <string name="edit_ptize">Edit prize</string>
    <string name="new_prize">New prize</string>
    <string name="delete_prize">Delete prize</string>
    <string name="delete_prize_confirm" >Are you sure you want to delete this prize?</string>
    <string name="draw_winner">Draw winner</string>
    <string name="prize">Prize</string>
    <string name="winner">Winner</string>
    <string name="delete_winner_confirm" >Are you sure you want to delete this winner?\nNeither ticket nor prize will be deleted.</string>
    <string name="no_prizes_left">No prizes left.</string>
    <string name="no_winless_numbers">No winless lottery numbers left.</string>
    <string name="select_prize_to_win">Select prize to win</string>
    <string name="prize_selection_confirmation" >Drawing winner for prize:\n%1$s</string>
    <string name="no_active_lottery">No active lottery selected.</string>
    <string name="menu_open">Open menu</string>
    <string name="menu_close">Close menu</string>
    <string name="velvet_pearl_lottery">Velvet Pearl Lottery</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="active_lottery">Active Lottery</string>
    <string name="misc">Miscellaneous</string>
    <string name="settings">Settings</string>
    <string name="multi_winner_settings_title" >Allow multiple prizes per ticket</string>
    <string name="multi_winner_settings_summary" >Multiple lottery numbers from the same ticket can win.</string>
    <string name="preference_multi_winner_key" translatable="false">preference_multi_winner</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="create_lottery">Create lottery</string>
    <string name="name">Name</string>
    <string name="new_lottery_name_hint">Give the lottery a name</string>
    <string name="new_lottery_error_missing_name">Missing name.</string>
    <string name="new_lottery_error_min_not_int">Range minimum must be a whole number.</string>
    <string name="new_lottery_error_max_not_int">Range maximum must be a whole number.</string>
    <string name="new_lottery_error_min_negative" >Range minimum must have value 1 or higher.</string>
    <string name="new_lottery_error_max_small">Range maximum must be bigger than minimum.</string>
    <string name="new_lottery_error_price_not_double">Lottery number price must be a positive number.</string>
    <string name="please_wait">Please wait</string>
    <string name="creating_lottery">Creating lottery</string>
    <string name="created">Created</string>
    <string name="new_ticket">New Ticket</string>
    <string name="logo_description" translatable="false">Velvet Pearl logo</string>
    <string name="about_error_loading">Could not display the about page.</string>
    <string name="about_language_warning">This page is only available in English.</string>
    <string name="new_number_description">Add new lottery number</string>
    <string name="delete_lottery_confirm">Are you sure you want to delete this lottery?</string>
    <string name="print_to_file">Print to file</string>
    <string name="print_to_file_confirm_message">Print the lottery to a file?</string>
    <string name="print_to_file_progress_message">Printing lottery to file</string>
    <string name="print_to_file_finished">Finished printing file</string>
    <string name="print_save_to_device">Save on device</string>
    <string name="print_save_as">Save as (.vplf)</string>
    <string name="internal" translatable="false">Internal</string>
    <string name="external" translatable="false">External</string>
    <string name="print_save_as_hint">Name of the file</string>
    <string name="no_external_drive">Found no external drive</string>
    <string name="missing_file_name">Missing file name</string>
    <string name="file_exists">File already exist. Overwrite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="an_error_happened">An error occurred</string>
    <string name="print_to_file_cancelled">Print to file cancelled</string>
    <string name="print_to_file_space_error">Insufficient free space</string>
    <string name="authenticating">Authenticating</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="notification_service_description">Produces system notifications when a new Velvet Pearl Lottery is added.</string>
    <string name="enable_lottery_notifications">Enable lottery notifications</string>
    <string name="enable_lottery_notifications_summary">System pushes notifications when other users create new lotteries.</string>
    <string name="preference_lottery_notifications" translatable="false">preference_lottery_notifications</string>
    <string name="lottery_notification_title">New Velvet Pearl Lottery</string>
    <string name="lottery_notification_text">%1$s was created.</string>
</resources>
