<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/lottery_number"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="27sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/lottery_num_instructions"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/lottery_num_input"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/lottery_num_input_hint"
            android:inputType="number"
            android:gravity="end|bottom"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/lottery_num_error_lab"
            android:layout_height="match_parent"
            android:text="@string/lottery_num_error_range"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:textColor="@android:color/holo_red_dark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/lottery_num_random_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/random"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/lottery_num_specific_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/use_number"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>

</TableLayout>