<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0"
    app:theme="@style/Datapad.Dialog">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:id="@+id/prize_input_dlg_title"
            android:text="Title here"
            style="@style/Datapad.Dialog.Title"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/prize_input_dlg_name"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/prize_name_hint"
            android:gravity="end|bottom"
            android:layout_weight="1"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:minWidth="250dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/prize_input_dlg_error_lab"
            android:layout_height="match_parent"
            android:text="@string/prize_error_name_required"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:textColor="@android:color/holo_red_dark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/prize_input_dlg_cancel_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/prize_input_dlg_save_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>

</TableLayout>