<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:id="@+id/ticket_edit_title"
        android:text="@string/ticket"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="5dp"
        android:textAllCaps="false"
        android:textStyle="normal|bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <TableRow android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/ticket_edit_owner"
                android:text="@string/owner"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"
                android:gravity="center_vertical"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:id="@+id/ticket_edit_owner_input"
                android:inputType="text"
                android:hint="@string/ticket_edit_owner_hint"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"/>
        </TableRow>

        <TableRow android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/ticket_edit_price"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:id="@+id/ticket_edit_price_var"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#000000" />

        <TableRow android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="match_parent"
                android:id="@+id/ticket_edit_numbers"
                android:text="@string/lottery_numbers"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:textSize="22sp" />
            <ImageButton
                android:id="@+id/ticket_edit_new_number"
                android:src="@android:drawable/ic_input_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"/>
        </TableRow>
    </TableLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:id="@+id/ticket_edit_numbers_list"
        android:layout_marginBottom="10dp">

    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/ticket_edit_save"
        android:text="@string/save"/>

</LinearLayout>