<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vplogo_large"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_description"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_lottery"
            android:id="@+id/home_btn_new_lottery"
            android:layout_gravity="center_horizontal"
            android:width="150dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lottery_history"
            android:id="@+id/home_btn_history"
            android:layout_gravity="center_horizontal"
            android:width="150dp"
            android:layout_marginTop="40dp"/>
    </LinearLayout>


</LinearLayout>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".fragments.Welcome">-->

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<TextView-->
            <!--android:layout_weight="50"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/home_upper_buffer"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/new_lottery"-->
            <!--android:id="@+id/home_btn_new_lottery"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:width="150dp" />-->

        <!--<TextView-->
            <!--android:layout_weight="5"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/home_middle_buffer"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/lottery_history"-->
            <!--android:id="@+id/home_btn_history"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:width="150dp" />-->

        <!--<TextView-->
            <!--android:layout_weight="50"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/home_lower_buffer"-->
            <!--android:layout_gravity="center_horizontal" />-->

    <!--</LinearLayout>-->
<!--</FrameLayout>-->
